tests/mytests/error/return_error.vsl
INT return
return := 4 + 3
